# proyectoCT

./: .dockignore  .env.example  .gitignore  Dockearfile  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  reload_all.sh
datos/: datos.txt
docs/: comprension.html  comprension_datos.html  despliegue.html  documentacion.html  home.html  modelado.html  preparacion.html  search.json  styles.css
quarto/: _quarto.yml  comprension.qmd  comprension_datos.qmd  despliegue.qmd  documentacion.qmd  home.qmd  modelado.qmd  preparacion.qmd
quarto/_site/: comprension.html  comprension_datos.html  despliegue.html  home.html  index.html  modelado.html  preparacion.html  search.json  styles.css
quarto/docs/: comprension_datos.html  home.html
react-fastapi/chatbot-local/: app.js  base.html  prueba_widget.html  sdk.js  styles.css
react-fastapi/chatbot-pruebas/: styles.css
src/ct/: __init__.py  chat.py  clients.py  config.py  history.py  llm.py  llm_types.py  main.py  respaldo_history.py  retriever.py  run_report.py  tokens.py
src/ct/ETL/: ETL.ipynb  extraction.py  load.py  pipeline.py  transform.py  update_vector_stores.py
src/ct/ETL/faiss_vector_store/: index.faiss  index.pkl
src/ct/ETL/products_vector_store/: index.faiss  index.pkl
src/ct/ETL/sales_products_vector_store/: index.faiss  index.pkl
src/ct/langchain/: assistant.py  doccollection.py  embedder.py  existences.py  moderated_tool_agent.py  rag.py  rag_assistant.py  tool_agent.py  vectorstore.py
src/ct/langgraph/: assistant.py
src/ct/moderation/: query_moderator.py
src/ct/ollama/: assistant.py
src/ct/openai/: assistant.py  llm.py
src/ct/reportes/: report_2.py  run_report.py
src/ct/settings/: cache.py  clients.py  config.py  prompt.py  tokens.py
src/ct/tools/: assistant.py  ct_info.py  doccollection.py  embedder.py  existences.py  extract_images.py  extract_sucursales_info.py  extract_text.py  fetch_data_to_json.py  get_partnerCT.py  guarantees.py  inventory.py  moneda_api.py  sales_rules_tool.py  search_information.py  status.py  sucursales.py  support.py  vectorstore.py
static/: ssl.txt
ui/: app.js  prueba_widget.html  sdk.js  styles.css
