[project]
name = "proyectoct"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cloudscraper>=1.2.71",
    "dash>=3.0.4",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "fastapi[standard]>=0.115.11",
    "langchain>=0.3.19",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.40",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.25",
    "matplotlib>=3.10.1",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.2.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "pydantic>=2.10.6",
    "pymongo>=4.13.0",
    "pytz>=2025.1",
    "quarto>=0.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "streamlit>=1.45.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
proyectoct = "proyectoct:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
