[project]
name = "proyectoct"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cloudscraper>=1.2.71",
    "dash>=3.0.4",
    "datasets>=4.0.0",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.10.0",
    "fastapi[standard]>=0.115.11",
    "fitz>=0.0.1.dev2",
    "forex-python>=1.9.2",
    "frontend>=0.0.3",
    "langchain>=0.3.19",
    "langchain-cli>=0.0.36",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.40",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.25",
    "matplotlib>=3.10.1",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.2.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "nltk>=3.9.1",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "peft>=0.17.1",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "pydantic>=2.10.6",
    "pymongo>=4.13.0",
    "pymupdf>=1.26.4",
    "pymysql>=1.1.1",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.13",
    "pytz>=2025.1",
    "quarto>=0.1.0",
    "rapidfuzz>=3.13.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "streamlit>=1.45.0",
    "tesseract>=0.1.3",
    "tiktoken>=0.9.0",
    "transformers>=4.55.4",
    "unsloth>=2025.7.2",
    "uvicorn>=0.34.0",
]

[project.scripts]
proyectoct = "ct.main:app"  # Ajusta esto si el entrypoint es otro

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
